<resources>
    <string name="app_name">AlquilerApartamento</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_manage">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_close">Close</string>
    <string name="menu_camera">Camera</string>



    <string name="welcome">Welcome</string>
    <string name="prompt_email">Enter email</string>
    <string name="action_sign_in">Next</string>
    <string name="adam">©ADAM</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalided_email">This email address is invalid</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Enter the password</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="networks">Check your internet connection</string>

    <string name="invalid_credentials">Invalid credentials</string>
    <string name="name">Name</string>
    <string name="last_name">Lastname</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="desc"></string>
    <string name="fail_register">Failed to register users</string>


</resources>